fix spacing between footer and header, add styling to restaurantPage

--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -3,7 +3,7 @@ $primaryBlack: #222222;
 $navWhite: #f7f7f7;
 $backgroundWhite: #ffffff;
 $navLinkBrown: #666058;
-$gold: #ba9867;
+$primaryGold: #ba9867;
 
 footer {
   display: flex;
