--- a/styles/nav.scss
+++ b/styles/nav.scss
@@ -3,7 +3,7 @@ $primaryBlack: #222222;
 $navWhite: #f7f7f7;
 $backgroundWhite: #ffffff;
 $navLinkBrown: #666058;
-$gold: #ba9867;
+$primaryGold: #ba9867;
 
 .nav-links {
   list-style: none;
