--- a/styles/orderMenu.scss
+++ b/styles/orderMenu.scss
@@ -3,7 +3,7 @@ $primaryBlack: #222222;
 $navWhite: #f7f7f7;
 $backgroundWhite: #ffffff;
 $navLinkBrown: #666058;
-$gold: #ba9867;
+$primaryGold: #ba9867;
 
 body {
   padding-top: 40px;
@@ -20,11 +20,12 @@ body {
 
 .main-content {
   display: flex;
+  justify-content: space-between;
   margin: 50px;
 }
 
 .products-container {
-  width: 65%;
+  width: 63%;
 }
 
 .single-product {
@@ -58,6 +59,7 @@ body {
 
 .add-to-cart {
   background-color: $primaryGreen;
+  border: none;
   width: 100px;
   font-size: 14px;
   height: 50px;
@@ -89,12 +91,6 @@ p {
   align-items: center;
 }
 
-.product-image {
-  // border-radius: 15px;
-  // width: 100%;
-  // max-width: 225px;
-}
-
 .flex-row {
   padding: 30px;
 }
@@ -114,10 +110,13 @@ p {
   display: flex;
   flex-direction: row;
   // background-color: #fff;
-  border: 1px solid rgba(0, 0, 0, 0.125);
+  // border: 1px solid rgba(0, 0, 0, 0.125);
   border-radius: 0.25rem;
   flex-basis: 60%;
   padding: 30px;
+  display: flex;
+  box-shadow: rgb(8 35 48 / 24%) 0px 4px 8px;
+  margin-bottom: 25px;
 }
 
 h5 {
@@ -133,4 +132,46 @@ p {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.order-summary-container {
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  border-radius: 0.25rem;
+  height: 100%;
+  padding: 30px;
+  width: 450px;
+  position: sticky;
+  top: 86px;
+}
+
+.customer-info-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.card-title {
+  color: $primaryGreen;
+}
+
+.address {
+  color: $primaryGold;
+}
+
+#order-list {
+  width: 100%;
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+}
+
+.Total_Summary {
+  margin: 0;
+  align-self: center;
+}
+
+.order-summary-container .card-title {
+  text-align: center;
 }
